<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/pr5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/linear">
        <TextView
                android:text="@string/android_app_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/app_name_after"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"/>
        <Button
                android:text="Проверка разрешений"
                android:layout_width="wrap_content"
                android:background="@android:color/transparent"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" android:id="@+id/Storage"/>
    </LinearLayout>

    <TextView
            android:id="@+id/text_bottom"
            android:text="@string/text_bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/text_bottom"/>
    <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_above="@id/text_bottom"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content" android:layout_marginBottom="10dp">
        <Button
                android:text="@string/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignIn"
                android:background="@drawable/btn_sign_in"
                android:textColor="@android:color/white"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                style="?android:attr/buttonStyle"/>
        <Button
                android:text="@string/btnRegister"
                android:onClick="snowDialog"
                android:background="@drawable/btn_register"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="8dp"
                android:id="@+id/btnRegister"
                android:layout_weight="1" tools:ignore="OnClick"/>
    </LinearLayout>
</RelativeLayout>